Adding Transformers Architecture Image

--- a/Transformers_from_scratch.ipynb
+++ b/Transformers_from_scratch.ipynb
@@ -108,6 +108,38 @@
     "#importing library of warnings\n",
     "import warnings"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4b35c5d",
+   "metadata": {},
+   "source": [
+    "## 1. `Input Embedding.`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "007b9ea3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0e345e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9107649",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
