--- a/Transformers_from_scratch.ipynb
+++ b/Transformers_from_scratch.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "124e6e00",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "0b07508c",
    "metadata": {},
@@ -35,6 +27,7 @@
    "source": [
     "# all the important liberires from pytorch\n",
     "import torch\n",
+    "import numpy as np\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset,DataLoader, random_split\n",
     "from torch.utils.tensorboard import SummaryWriter"
@@ -72,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pathlib\n",
+    "# pathlib\n",
     "from pathlib import Path"
    ]
   },
@@ -94,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Library for progress bars in loops\n",
+    "# Library for progress bars in loops\n",
     "from tqdm import tqdm"
    ]
   },
@@ -105,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importing library of warnings\n",
+    "# Importing Library of warnings\n",
     "import warnings"
    ]
   },
@@ -114,7 +107,20 @@
    "id": "b4b35c5d",
    "metadata": {},
    "source": [
-    "## 1. `Input Embedding.`"
+    "## 1. `Input Embedding.`\n",
+    "\n",
+    "`d_model`: 512\n",
+    "\n",
+    "In Input Embedding, we multiply those weights, by `np.sqrt(d_model)`\n",
+    "\n",
+    "Example Sentence:\n",
+    "\n",
+    "`English sentence`: The animal didn't cross the street because it was too tired. \n",
+    "\n",
+    "**1. `Tokens`**\n",
+    "- Converting sentence into a single words. \n",
+    "\n",
+    "['The', 'animal', 'didn't', 'cross', 'the', 'street', 'because', 'it', 'was', 'too', 'tired' ]"
    ]
   },
   {
@@ -123,7 +129,25 @@
    "id": "007b9ea3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class InputEmbeddings(nn.Module):\n",
+    "    def __init__(self, d_model:int, vocab_size:int):\n",
+    "        super().__init__()\n",
+    "        self.d_model = d_model\n",
+    "        self.vocab_size = vocab_size\n",
+    "        self.embedding = nn.Embedding(vocab_size, d_model)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.embedding(x) * math.sqrt(self.d_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eea312c4",
+   "metadata": {},
+   "source": [
+    "## 2. `Positional Embedding`"
+   ]
   },
   {
    "cell_type": "code",
@@ -131,7 +155,37 @@
    "id": "b0e345e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PositionalEncoding(nn.Module):\n",
+    "    '''\n",
+    "    max_sequence_length: Like a length of the token.\n",
+    "    '''\n",
+    "    def __init__(self, d_model: int, seq_len: int, dropout: float):\n",
+    "        super().__init__()\n",
+    "        self.d_model = d_model\n",
+    "        self.seq_len = seq_len\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "        pe = torch.zeros(seq_len, d_model)\n",
+    "        position = torch.arange(0, seq_len, dtype=float).unsqueeze(1) # [seq_len, 1]\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
+    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
+    "        pe = pe.unsqueeze(0)\n",
+    "        self.register_buffer(\"pe\", pe)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = x + (self.pe[:, :x.shape[1], :]).requires_grad_(False)\n",
+    "        return self.dropout(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2f70635",
+   "metadata": {},
+   "source": [
+    "## 3. `Multihead Attention (Self-Head Attention)`"
+   ]
   },
   {
    "cell_type": "code",
