--- a/Transformers_from_scratch.ipynb
+++ b/Transformers_from_scratch.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "17c86be5",
    "metadata": {},
    "outputs": [],
@@ -193,12 +193,105 @@
    "id": "a9107649",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class MultiHeadAttentionBlock(nn.Module):\n",
+    "    def __init__(self, d_model: int, h: int, dropout : float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.d_model = d_model\n",
+    "        self.h = h\n",
+    "        assert d_model % h == 0, 'd_model is not divisible by h'\n",
+    "\n",
+    "        self.d_k = d_model // h\n",
+    "\n",
+    "        self.w_q = nn.Linear(d_model, d_model)\n",
+    "        self.w_k = nn.Linear(d_model, d_model)\n",
+    "        self.w_v = nn.Linear(d_model, d_model)\n",
+    "        self.w_o = nn.Linear(d_model, d_model)\n",
+    "\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def attention(query, key, value, mask, dropout: nn.Dropout):\n",
+    "        d_k = query.shape[-1]\n",
+    "        attention_score = (query @ key.transpose(-2, -1)) / math.sqrt(d_k)\n",
+    "\n",
+    "        if mask is not None:\n",
+    "            attention_score.masked_fill_(mask==0, -1e9)\n",
+    "        attention_score = attention_score.softmax(dim = -1)\n",
+    "\n",
+    "        if dropout is not None:\n",
+    "            attention_score = dropout(attention_score)\n",
+    "        return (attention_score @ value),attention_score\n",
+    "\n",
+    "    def forward(self, q, k, v, mask):\n",
+    "\n",
+    "        query = self.w_q(q) # (1, 11, 512)\n",
+    "        key = self.w_k(k) # (1, 11, 512)\n",
+    "        value = self.w_v(v) # (1, 11, 512)\n",
+    "\n",
+    "        # Reshaping. \n",
+    "        query = query.view(query.shape[0], query.shape[1], self.h, self.d_k).transpose(1,2) # [1, 8, 11, 64]\n",
+    "        key = key.view(key.shape[0], key.shape[1], self.h, self.d_k).transpose(1, 2) # [1, 8, 11, 64]\n",
+    "        value = value.view(value.shape[0], value.shape[1], self.h, self.d_k).transpose(1, 2) # [1, 8, 11, 64]\n",
+    "\n",
+    "        x, self.attention_score = MultiHeadAttentionBlock.attention(query, key, value, mask, self.dropout)\n",
+    "\n",
+    "        x = x.transpose(1, 2).contiguous().view(x.shape[0], -1, self.h * self.d_k)\n",
+    "        return self.w_o(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1435990b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51a60ab6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b0dcdcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35bc8188",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f55d9281",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e730989a",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "transformers",
    "language": "python",
    "name": "python3"
   },
@@ -212,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
