--- a/Transformers_from_scratch.ipynb
+++ b/Transformers_from_scratch.ipynb
@@ -241,12 +241,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c122e468",
+   "metadata": {},
+   "source": [
+    "## 4. `Layer Normalization`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1435990b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class LayerNormalization(nn.Module):\n",
+    "    def __init__(self, eps: float=10**-6) -> None: # 0.000001\n",
+    "        self.eps = eps \n",
+    "        self.gamma = nn.Parameter(torch.ones(1))\n",
+    "        self.bias = nn.Parameter(torch.zeros(1))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        mean = x.mean(dim=-1, keepdim=True)\n",
+    "        std = x.std(dim=-1, keepdim=True)\n",
+    "        return self.alpha * (x-mean) / (std + self.eps) + self.bias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d557118d",
+   "metadata": {},
+   "source": [
+    "## 5. `FeedForwardBlock`"
+   ]
   },
   {
    "cell_type": "code",
@@ -254,15 +281,25 @@
    "id": "51a60ab6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class FeedForwardBlock(nn.Module):\n",
+    "    def __init__(self, d_model: int, d_ff:int, dropout: float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.linear_1 = nn.Linear(d_model, d_ff)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.linear_2 = nn.Linear(d_ff, d_model)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.linear_2(self.dropout(torch.relu(self.linear(x))))"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b0dcdcb",
+   "cell_type": "markdown",
+   "id": "9ec9d266",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 6. `Residual Connection`"
+   ]
   },
   {
    "cell_type": "code",
@@ -270,7 +307,25 @@
    "id": "35bc8188",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ResidualConnection(nn.Module):\n",
+    "    def __init__(self, dropout: float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.norm = LayerNormalization()\n",
+    "\n",
+    "    def forward(self, x, sublayer):\n",
+    "        # return x + self.dropout(self.norm(sublayer(x)))\n",
+    "        return x + self.dropout(sublayer(self.norm(x)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f8ce3b9",
+   "metadata": {},
+   "source": [
+    "## 7. `Encoder Architecture`"
+   ]
   },
   {
    "cell_type": "code",
@@ -278,7 +333,158 @@
    "id": "f55d9281",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class EncoderBlock(nn.Module):\n",
+    "    def __init__(self, self_attention_block: MultiHeadAttentionBlock, feed_forward_block: FeedForwardBlock, dropout: float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.self_attention_block = self_attention_block\n",
+    "        self.feed_forward_block = feed_forward_block\n",
+    "        self.residual_connections = nn.ModuleList([ResidualConnection(dropout)] for _ in range(2))\n",
+    "    \n",
+    "    def forward(self, x, src_mask):\n",
+    "        x = self.residual_connections[0](x, lambda x: self.self_attention_block(x, x, x, src_mask))\n",
+    "        x = self.residual_connections[1](x, self.feed_forward_block)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6db2ec41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now, Building 6 Encoder. \n",
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, layers:nn.ModuleList) -> None:\n",
+    "        super().__init__()\n",
+    "        self.norm = LayerNormalization()\n",
+    "    \n",
+    "    def forward(self, x, mask):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x, mask)\n",
+    "        return self.norm(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b07cba5",
+   "metadata": {},
+   "source": [
+    "## 8. `Decoder Architecture`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53b6e774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecoderBlock(nn.Module):\n",
+    "    def __init__(self, self_attention_block: MultiHeadAttentionBlock, cross_attention_block: MultiHeadAttentionBlock, feed_forward_block: FeedForwardBlock, dropout: nn.Dropout):\n",
+    "        super().__init__()\n",
+    "        self.self_attention_block = self_attention_block\n",
+    "        self.cross_attention_block = cross_attention_block\n",
+    "        self.feed_forward_block = feed_forward_block \n",
+    "        self.residual_connections = nn.ModuleList([ResidualConnection(dropout) for _ in range(3)])\n",
+    "    \n",
+    "    def forward(self, x, encoder_output, src_mask, tgt_mask):\n",
+    "        x = self.residual_connections[0](x, lambda x: self.self_attention_block(x, x, x, tgt_mask))\n",
+    "        x = self.residual_connections[1](x, lambda x: self.cross_attention_block(x, encoder_output, encoder_output, src_mask))\n",
+    "        x = self.residual_connections[2](x, self.feed_forward_block)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94dfc156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Decoder(nn.Module):\n",
+    "    def __init__(self, layers: nn.ModuleList) -> None:\n",
+    "        super().__init__()\n",
+    "        self.layers = layers\n",
+    "        self.norm = LayerNormalization()\n",
+    "    \n",
+    "    def forward(self, x, encoder_output, src_mask, tgt_mask):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x, encoder_output, src_mask, tgt_mask)\n",
+    "        return self.norm(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56485f15",
+   "metadata": {},
+   "source": [
+    "## 9.`Projection Layers`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4d4da59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ProjectionLayer(nn.Module):\n",
+    "    def __init__(self, d_model:int, vocab_size:int) -> None:\n",
+    "        super().__init__()\n",
+    "        self.proj = nn.Linear(d_model, vocab_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return torch.log_softmax(self.proj(x), dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48178bf3",
+   "metadata": {},
+   "source": [
+    "## 10. `Transformers`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52cea2a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Transformer(nn.Module):\n",
+    "    def __init__(self, \n",
+    "                 encoder: Encoder,\n",
+    "                 decoder: Decoder,\n",
+    "                 src_embed: InputEmbeddings, \n",
+    "                 tgt_embed: InputEmbeddings, \n",
+    "                 src_pos: PositionalEncoding,\n",
+    "                 tgt_pos: PositionalEncoding, \n",
+    "                 projection_layer: ProjectionLayer) -> None:\n",
+    "        super().__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.src_embed = src_embed\n",
+    "        self.tgt_embed = tgt_embed\n",
+    "        self.src_pos = src_pos\n",
+    "        self.tgt_pos = tgt_pos\n",
+    "        self.projection_layer = projection_layer\n",
+    "        \n",
+    "    def encoder(self, src, src_mask):\n",
+    "        src = self.src_embed(src)\n",
+    "        src = self.src_pos(src)\n",
+    "        return self.encoder(src, src_mask)\n",
+    "\n",
+    "    def decoder(self, encoder_output, src_mask, tgt, tgt_mask):\n",
+    "        tgt = self.tgt_embed(tgt)\n",
+    "        tgt = self.tgt_pos(tgt)\n",
+    "        return self.decoder(tgt, encoder_output, src_mask, tgt_mask)\n",
+    "\n",
+    "    def project(self, x):\n",
+    "        return self.projection_layer(x)"
+   ]
   },
   {
    "cell_type": "code",
